cart_chackout_page_new_update

--- a/Frontend/Shopcart/src/app/Pages/checkout/checkout/checkout.component.html
+++ b/Frontend/Shopcart/src/app/Pages/checkout/checkout/checkout.component.html
@@ -129,15 +129,15 @@
                       <div><h5>Cart Subtotal</h5></div>
                       <div>
                         <h5 class="inline difwidth">Shipping</h5>
-                        <p class="inline alignright center">{{priceSummary.shipping | currency: 'INR'}}</p>
+                        <p class="inline alignright center">{{productSummary.shipping | currency: 'INR'}}</p>
                       </div>
                       <div>
                         <h5 class="inline difwidth">Discount</h5>
-                        <p class="inline alignright center">{{priceSummary.discount | currency: 'INR'}}</p>
+                        <p class="inline alignright center">{{productSummary.discount | currency: 'INR'}}</p>
                       </div>
                       <div>
                         <h5 class="inline difwidth">Order Total</h5>
-                        <p class="inline alignright center">{{priceSummary.totalPrice | currency: 'INR'}}</p>
+                        <p class="inline alignright center">{{productSummary.totalPrice | currency: 'INR'}}</p>
                       </div>
                       <div>
                         <h3 class="topborder"><span>Payment Method</span></h3>
