--- a/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
@@ -141,46 +141,47 @@
   
   <section id="sm-banner" class="section-p1"> 
     <div class="banner-box">
-      <h4>crazy deals</h4>
-      <h2>buy 1 get 1 free</h2>
-      <span>The best classic dress is on sales at cara</span>
+      <h4>Crazy Deals</h4>
+      <h2>Buy 1 get 1 free</h2>
+      <span>The best classic dress is on sales</span>
       <button class="btn white">Learn More</button> 
     
     </div>
     
     <div class="banner-box banner-box2">
-      <h4>spring/summer</h4>
-      <h2>upcoming season</h2>
-      <span>The best classic dress is on sales at cara</span>
+      <h4>Spring Summer</h4>
+      <h2>Upcoming Season</h2>
+      <span>The best classic dress is on sales</span>
       <button class="btn white">Collection</button> 
     
     </div>
     
   </section>
-  
-  <section id="banner3" class="section-p1">
-    <div class="banner-box">
-      
-      <h2>SEASONAL SALES</h2>
-      <h3>Winter Collection -50% OFF</h3>
-   
-    </div>
-    
-    <div class="banner-box banner-img2">
-      
-      <h2>SEASONAL SALES</h2>
-      <h3>Winter Collection -50% OFF</h3>
-   
-    </div>
-    
-    <div class="banner-box banner-img3">
-      
-      <h2>SEASONAL SALES</h2>
-      <h3>Winter Collection -50% OFF</h3>
-   
-    </div>
-    
-  </section>
+
+  <ngb-carousel>
+    <ng-template ngbSlide>
+      <section id="banner3" class="section-p1">
+        <div class="banner-box"></div>
+        <div class="banner-box banner-img2"></div> 
+        <div class="banner-box banner-img3"></div>
+      </section>
+    </ng-template>
+    <ng-template ngbSlide>
+      <section id="banner3" class="section-p1">
+        <div class="banner-box img-1"></div>
+        <div class="banner-box banner-img2 img-2"></div> 
+        <div class="banner-box banner-img3 img-3"></div>
+      </section>
+    </ng-template>
+    <ng-template ngbSlide>
+      <section id="banner3" class="section-p1">
+        <div class="banner-box img-4"></div>
+        <div class="banner-box banner-img2 img-5"></div> 
+        <div class="banner-box banner-img3 img-6"></div>
+      </section>
+    </ng-template>
+    </ngb-carousel>
+
   
   <section id="newsletter" class="section-p1">
     <div class="newstext">
