--- a/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.html
+++ b/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.html
@@ -107,7 +107,7 @@
                 <li
                   class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                   Price
-                  <span>{{priceSummary.price | currency: 'INR'}}</span>
+                  <span>{{priceSummary.subtotal | currency: 'INR'}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                   Discount
